<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" >

    <LinearLayout
        android:id="@+id/join_basic_frame"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/join_imgbtn_profile"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:background="#ffff"
            android:contentDescription="@string/join_img_description"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/upload" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/join_edt_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/join_hint_id"
                android:inputType="number" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/join_edt_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/join_hint_pw"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/join_edt_pwRe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/join_hint_pwRe"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/join_edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/join_hint_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/join_edt_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/join_hint_nickname"
                android:inputType="textPersonName" />
        </LinearLayout>

        <Button
            android:id="@+id/join_btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/join_btn_next" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/join_addtional_frame"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/join_txt_additional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_txt_additional" />
            

        <EditText
            android:id="@+id/join_edt_address"
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:ems="10"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/join_txt_age"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/join_txt_birth"
                android:textColor="#787777" />

            <Spinner
                android:id="@+id/join_spinner_birth"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:entries="@array/join_string_birth"
                android:prompt="@string/join_spinner_birth" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <TextView
                android:id="@+id/join_txt_grade"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/join_txt_grade"
                android:textColor="#787777" />

            <Spinner
                android:id="@+id/join_spinner_grade"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:entries="@array/join_string_grade"
                android:prompt="@string/join_spinner_grade" />
        </LinearLayout>

        <Button
            android:id="@+id/join_btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/join_btn_register" />
    </LinearLayout>

</FrameLayout>