<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".Splash" >

    <ImageView
        android:id="@+id/splash_img_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/splash_description"
        android:src="@drawable/splash_bg" />

    <LinearLayout
        android:id="@+id/splash_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="#ff000000"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="1"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/splash_login_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:visibility="invisible" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/splash_edt_id"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/splash_hint_id"
                android:inputType="number" />

            <EditText
                android:id="@+id/splash_edt_pw"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/splash_hint_pw"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/splash_btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/splash_login" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:layout_marginBottom="70dp">
        <TextView
            android:id="@+id/splash_text_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:visibility="invisible"
            android:text="@string/splash_text_join" />
    </LinearLayout>

</FrameLayout>